--- a/FrontWeb/index.html
+++ b/FrontWeb/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Access-Control-Allow-Origin" content="https://localhost:44351/weatherforecast">
     <title>frontweb</title>
   </head>
   <body>
